<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="Peru_question">¿Es lima la capital del Peru?</string>
    <string name="Chile_quetion">¿Es Arica la capital de CHile?</string>
    <string name="Colombia_quetion">¿Es Caracas la capital de Colombia?</string>
    <string name="Button1">Si</string>
    <string name="Button2">No</string>
    <string name="Correct">Es correcto</string>
    <string name="Incorrect">Es incorrecto</string>
    <string name="bt_next">Siguiente</string>
    <string name="bt_previous">Atras</string>
</resources>
